SERVER-41314 Make txn_two_phase_commit_failover.js robust to a participant voting abort before other prepare requests are sent (#25576)

GitOrigin-RevId: 2ba1085466f435bcc0b29fcbfa7dbb20e3f34459