src/mongo/db/s/transaction_coordinator_futures_util.cpp
@@ -75,6 +75,30 @@ MONGO_FAIL_POINT_DEFINE(hangWhileTargetingLocalHost);
 using RemoteCommandCallbackArgs = executor::TaskExecutor::RemoteCommandCallbackArgs;
 using ResponseStatus = executor::TaskExecutor::ResponseStatus;
 
+bool shouldActivateFailpoint(BSONObj commandObj, BSONObj data) {
+    LOGV2(4131400,
+          "Assessing TransactionCoordinator failpoint for activation with command and data",
+          "cmdObj"_attr = commandObj,
+          "data"_attr = data);
+    BSONElement twoPhaseCommitStage = data["twoPhaseCommitStage"];
+    invariant(!twoPhaseCommitStage.eoo());
+    invariant(twoPhaseCommitStage.type() == BSONType::String);
+    StringData twoPhaseCommitStageValue = twoPhaseCommitStage.valueStringData();
+    constexpr std::array<StringData, 3> fieldNames{
+        "prepareTransaction"_sd, "commitTransaction"_sd, "abortTransaction"_sd};
+    std::array<BSONElement, 3> fields;
+    commandObj.getFields(fieldNames, &fields);
+    const bool commandIsPrepare = !fields[0].eoo();
+    const bool commandIsDecision = !(fields[1].eoo() && fields[2].eoo());
+    if (commandIsDecision && twoPhaseCommitStageValue == "decision") {
+        return true;
+    }
+    if (commandIsPrepare && twoPhaseCommitStageValue == "prepare") {
+        return true;
+    }
+    return false;
+}
+
 }  // namespace
 
 AsyncWorkScheduler::AsyncWorkScheduler(ServiceContext* serviceContext)
@@ -147,7 +171,8 @@ Future<executor::TaskExecutor::ResponseStatus> AsyncWorkScheduler::scheduleRemot
             AuthorizationSession::get(opCtx->getClient())
                 ->grantInternalAuthorization(opCtx->getClient());
 
-            if (MONGO_unlikely(hangWhileTargetingLocalHost.shouldFail())) {
+            if (MONGO_unlikely(hangWhileTargetingLocalHost.shouldFail(
+                    [&](BSONObj data) { return shouldActivateFailpoint(commandObj, data); }))) {
                 LOGV2(22449, "Hit hangWhileTargetingLocalHost failpoint");
                 hangWhileTargetingLocalHost.pauseWhileSet(opCtx);
             }
@@ -175,7 +200,7 @@ Future<executor::TaskExecutor::ResponseStatus> AsyncWorkScheduler::scheduleRemot
         });
     }
 
-    return _targetHostAsync(shardId, readPref, operationContextFn)
+    return _targetHostAsync(shardId, readPref, operationContextFn, commandObj)
         .then([this, shardId, commandObj = commandObj.getOwned(), readPref](
                   HostAndShard hostAndShard) mutable {
             executor::RemoteCommandRequest request(hostAndShard.hostTargeted,
@@ -281,25 +306,30 @@ void AsyncWorkScheduler::join() {
 Future<AsyncWorkScheduler::HostAndShard> AsyncWorkScheduler::_targetHostAsync(
     const ShardId& shardId,
     const ReadPreferenceSetting& readPref,
-    OperationContextFn operationContextFn) {
-    return scheduleWork([this, shardId, readPref, operationContextFn](OperationContext* opCtx) {
-        operationContextFn(opCtx);
-        const auto shardRegistry = Grid::get(opCtx)->shardRegistry();
-        auto shard = uassertStatusOK(shardRegistry->getShard(opCtx, shardId));
+    OperationContextFn operationContextFn,
+    BSONObj commandObj) {
+    return scheduleWork(
+        [this, shardId, readPref, operationContextFn, commandObj = commandObj.getOwned()](
+            OperationContext* opCtx) {
+            operationContextFn(opCtx);
+            const auto shardRegistry = Grid::get(opCtx)->shardRegistry();
+            auto shard = uassertStatusOK(shardRegistry->getShard(opCtx, shardId));
 
-        if (MONGO_unlikely(hangWhileTargetingRemoteHost.shouldFail())) {
-            LOGV2(22450, "Hit hangWhileTargetingRemoteHost failpoint", "shardId"_attr = shardId);
-            hangWhileTargetingRemoteHost.pauseWhileSet(opCtx);
-        }
+            if (MONGO_unlikely(hangWhileTargetingRemoteHost.shouldFail(
+                    [&](BSONObj data) { return shouldActivateFailpoint(commandObj, data); }))) {
+                LOGV2(
+                    22450, "Hit hangWhileTargetingRemoteHost failpoint", "shardId"_attr = shardId);
+                hangWhileTargetingRemoteHost.pauseWhileSet(opCtx);
+            }
 
-        auto targeter = shard->getTargeter();
-        return targeter->findHost(readPref, CancellationToken::uncancelable())
-            .thenRunOn(_executor)
-            .unsafeToInlineFuture()
-            .then([shard = std::move(shard)](HostAndPort host) mutable -> HostAndShard {
-                return {std::move(host), std::move(shard)};
-            });
-    });
+            auto targeter = shard->getTargeter();
+            return targeter->findHost(readPref, CancellationToken::uncancelable())
+                .thenRunOn(_executor)
+                .unsafeToInlineFuture()
+                .then([shard = std::move(shard)](HostAndPort host) mutable -> HostAndShard {
+                    return {std::move(host), std::move(shard)};
+                });
+        });
 }
 
 bool AsyncWorkScheduler::_quiesced(WithLock) const {
