jstests/sharding/libs/sharded_transactions_helpers.js
@@ -17,25 +17,27 @@ export function getCoordinatorFailpoints() {
         {
             // Test targeting remote nodes for prepare
             failpoint: "hangWhileTargetingRemoteHost",
-            numTimesShouldBeHit: 2 /* once per remote participant */
+            numTimesShouldBeHit: 2, /* once per remote participant */
+            data: {twoPhaseCommitStage: "prepare"}
         },
         {
             // Test targeting local node for prepare
             failpoint: "hangWhileTargetingLocalHost",
-            numTimesShouldBeHit: 1
+            numTimesShouldBeHit: 1,
+            data: {twoPhaseCommitStage: "prepare"}
         },
         {failpoint: "hangBeforeWritingDecision", numTimesShouldBeHit: 1},
         {
             // Test targeting remote nodes for decision
             failpoint: "hangWhileTargetingRemoteHost",
             numTimesShouldBeHit: 2, /* once per remote participant */
-            skip: 2                 /* to skip when the failpoint is hit for prepare */
+            data: {twoPhaseCommitStage: "decision"},
         },
         {
             // Test targeting local node for decision
             failpoint: "hangWhileTargetingLocalHost",
             numTimesShouldBeHit: 1,
-            skip: 1 /* to skip when the failpoint is hit for prepare */
+            data: {twoPhaseCommitStage: "decision"},
         },
         {failpoint: "hangBeforeDeletingCoordinatorDoc", numTimesShouldBeHit: 1},
     ];
