jstests/sharding/txn_two_phase_commit_killop.js
@@ -104,7 +104,8 @@ const testCommitProtocol = function(shouldCommit, failpointData) {
     // Turn on failpoint to make the coordinator hang at a the specified point.
     assert.commandWorked(coordinator.adminCommand({
         configureFailPoint: failpointData.failpoint,
-        mode: {skip: (failpointData.skip ? failpointData.skip : 0)},
+        mode: "alwaysOn",
+        data: failpointData.data ? failpointData.data : {}
     }));
 
     // Run commitTransaction through a parallel shell.
